// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`QueryCollectionItemComponent > should render collapsed collection correctly 1`] = `
<div
  id="root8"
  ng-version="20.3.3"
>
  <div
    class="query-collections__item"
  >
    <div
      class="query-collections__item-details-wrapper"
    >
      <div
        class="query-collections__item-details"
        data-test-id="collection-collapse"
      >
        <div
          class="query-collections__item-title"
        >
          <!--container-->
          <span
            class="query-title-icon"
          >
            <app-icon
              name="folder-plus"
            />
          </span>
          <!--container-->
          <span>
            collection-1
          </span>
        </div>
        <div
          class="query-collections__item-meta"
        >
            3 
        </div>
      </div>
      <!--container-->
      <div
        class="query-collections__item-right"
      >
        <span
          class="query-collections__item-icon"
        >
          <button
            class="query-collections__item-icon__button"
            nz-dropdown=""
            nztrigger="click"
            type="button"
          >
            <app-icon
              name="more-horizontal"
            />
          </button>
          <!--container-->
        </span>
        <nz-dropdown-menu>
          <ul
            nz-menu=""
          >
            <!--container-->
            <li
              data-test-id="edit-collection"
              nz-menu-item=""
            >
                
            </li>
            <!--container-->
            <li
              data-test-id="delete-collection"
              nz-menu-item=""
            >
                
            </li>
            <!--container-->
            <li
              data-test-id="export-collection"
              nz-menu-item=""
            >
                
            </li>
            <!--container-->
            <li
              nz-submenu=""
            >
              <ul>
                <li
                  data-test-id="sort-queries-a-z"
                  nz-menu-item=""
                >
                    
                </li>
                <!--container-->
                <li
                  data-test-id="sort-queries-z-a"
                  nz-menu-item=""
                >
                    
                </li>
                <!--container-->
                <li
                  data-test-id="sort-queries-newest"
                  nz-menu-item=""
                >
                    
                </li>
                <!--container-->
                <li
                  data-test-id="sort-queries-oldest"
                  nz-menu-item=""
                >
                    
                </li>
                <!--container-->
              </ul>
            </li>
            <!--container-->
          </ul>
          <!--container-->
        </nz-dropdown-menu>
      </div>
    </div>
    <div
      class="query-collections__item-content-wrapper query-collections__item-content--hidden"
    >
      <div
        class="query-collections__item-nested"
      >
        <!--container-->
      </div>
      <div
        class="query-collections__item-queries"
      >
        <div
          class="query-collections__item-queries-item"
        >
          <span
            class="query-collections__item-queries-item-title"
            data-test-id="query-item-title"
          >
            <span
              class="query-title-icon"
            >
              <app-icon
                name="file"
              />
            </span>
             Another Query 
            <!--container-->
            <!--container-->
          </span>
          <!--container-->
          <span
            class="query-collections__item-queries-item-right"
          >
            <span
              class="query-collections__item-queries-item-icon"
            >
              <button
                class="query-collections__item-icon__button"
                nz-dropdown=""
                nztrigger="click"
                type="button"
              >
                <app-icon
                  name="more-horizontal"
                />
              </button>
              <!--container-->
            </span>
            <nz-dropdown-menu>
              <ul
                nz-menu=""
              >
                <!--container-->
                <li
                  data-test-id="delete-query"
                  nz-menu-item=""
                >
                    
                </li>
                <!--container-->
              </ul>
              <!--container-->
            </nz-dropdown-menu>
          </span>
        </div>
        <div
          class="query-collections__item-queries-item"
        >
          <span
            class="query-collections__item-queries-item-title"
            data-test-id="query-item-title"
          >
            <span
              class="query-title-icon"
            >
              <app-icon
                name="file"
              />
            </span>
             Zap Query 
            <!--container-->
            <!--container-->
          </span>
          <!--container-->
          <span
            class="query-collections__item-queries-item-right"
          >
            <span
              class="query-collections__item-queries-item-icon"
            >
              <button
                class="query-collections__item-icon__button"
                nz-dropdown=""
                nztrigger="click"
                type="button"
              >
                <app-icon
                  name="more-horizontal"
                />
              </button>
              <!--container-->
            </span>
            <nz-dropdown-menu>
              <ul
                nz-menu=""
              >
                <!--container-->
                <li
                  data-test-id="delete-query"
                  nz-menu-item=""
                >
                    
                </li>
                <!--container-->
              </ul>
              <!--container-->
            </nz-dropdown-menu>
          </span>
        </div>
        <div
          class="query-collections__item-queries-item"
        >
          <span
            class="query-collections__item-queries-item-title"
            data-test-id="query-item-title"
          >
            <span
              class="query-title-icon"
            >
              <app-icon
                name="file"
              />
            </span>
             Query 1 
            <!--container-->
            <!--container-->
          </span>
          <!--container-->
          <span
            class="query-collections__item-queries-item-right"
          >
            <span
              class="query-collections__item-queries-item-icon"
            >
              <button
                class="query-collections__item-icon__button"
                nz-dropdown=""
                nztrigger="click"
                type="button"
              >
                <app-icon
                  name="more-horizontal"
                />
              </button>
              <!--container-->
            </span>
            <nz-dropdown-menu>
              <ul
                nz-menu=""
              >
                <!--container-->
                <li
                  data-test-id="delete-query"
                  nz-menu-item=""
                >
                    
                </li>
                <!--container-->
              </ul>
              <!--container-->
            </nz-dropdown-menu>
          </span>
        </div>
        <!--container-->
      </div>
    </div>
  </div>
  <!--container-->
</div>
`;

exports[`QueryCollectionItemComponent > should render queries correctly 1`] = `
<div
  id="root1"
  ng-version="20.3.3"
>
  <div
    class="query-collections__item"
  >
    <div
      class="query-collections__item-details-wrapper"
    >
      <div
        class="query-collections__item-details"
        data-test-id="collection-collapse"
      >
        <div
          class="query-collections__item-title"
        >
          <span
            class="query-title-icon"
          >
            <app-icon
              name="folder-minus"
            />
          </span>
          <!--container-->
          <!--container-->
          <span>
            collection-1
          </span>
        </div>
        <div
          class="query-collections__item-meta"
        >
            3 
        </div>
      </div>
      <!--container-->
      <div
        class="query-collections__item-right"
      >
        <span
          class="query-collections__item-icon"
        >
          <button
            class="query-collections__item-icon__button"
            nz-dropdown=""
            nztrigger="click"
            type="button"
          >
            <app-icon
              name="more-horizontal"
            />
          </button>
          <!--container-->
        </span>
        <nz-dropdown-menu>
          <ul
            nz-menu=""
          >
            <!--container-->
            <li
              data-test-id="edit-collection"
              nz-menu-item=""
            >
                
            </li>
            <!--container-->
            <li
              data-test-id="delete-collection"
              nz-menu-item=""
            >
                
            </li>
            <!--container-->
            <li
              data-test-id="export-collection"
              nz-menu-item=""
            >
                
            </li>
            <!--container-->
            <li
              nz-submenu=""
            >
              <ul>
                <li
                  data-test-id="sort-queries-a-z"
                  nz-menu-item=""
                >
                    
                </li>
                <!--container-->
                <li
                  data-test-id="sort-queries-z-a"
                  nz-menu-item=""
                >
                    
                </li>
                <!--container-->
                <li
                  data-test-id="sort-queries-newest"
                  nz-menu-item=""
                >
                    
                </li>
                <!--container-->
                <li
                  data-test-id="sort-queries-oldest"
                  nz-menu-item=""
                >
                    
                </li>
                <!--container-->
              </ul>
            </li>
            <!--container-->
          </ul>
          <!--container-->
        </nz-dropdown-menu>
      </div>
    </div>
    <div
      class="query-collections__item-content-wrapper"
    >
      <div
        class="query-collections__item-nested"
      >
        <!--container-->
      </div>
      <div
        class="query-collections__item-queries"
      >
        <div
          class="query-collections__item-queries-item"
        >
          <span
            class="query-collections__item-queries-item-title"
            data-test-id="query-item-title"
          >
            <span
              class="query-title-icon"
            >
              <app-icon
                name="file"
              />
            </span>
             Another Query 
            <!--container-->
            <!--container-->
          </span>
          <!--container-->
          <span
            class="query-collections__item-queries-item-right"
          >
            <span
              class="query-collections__item-queries-item-icon"
            >
              <button
                class="query-collections__item-icon__button"
                nz-dropdown=""
                nztrigger="click"
                type="button"
              >
                <app-icon
                  name="more-horizontal"
                />
              </button>
              <!--container-->
            </span>
            <nz-dropdown-menu>
              <ul
                nz-menu=""
              >
                <!--container-->
                <li
                  data-test-id="delete-query"
                  nz-menu-item=""
                >
                    
                </li>
                <!--container-->
              </ul>
              <!--container-->
            </nz-dropdown-menu>
          </span>
        </div>
        <div
          class="query-collections__item-queries-item"
        >
          <span
            class="query-collections__item-queries-item-title"
            data-test-id="query-item-title"
          >
            <span
              class="query-title-icon"
            >
              <app-icon
                name="file"
              />
            </span>
             Zap Query 
            <!--container-->
            <!--container-->
          </span>
          <!--container-->
          <span
            class="query-collections__item-queries-item-right"
          >
            <span
              class="query-collections__item-queries-item-icon"
            >
              <button
                class="query-collections__item-icon__button"
                nz-dropdown=""
                nztrigger="click"
                type="button"
              >
                <app-icon
                  name="more-horizontal"
                />
              </button>
              <!--container-->
            </span>
            <nz-dropdown-menu>
              <ul
                nz-menu=""
              >
                <!--container-->
                <li
                  data-test-id="delete-query"
                  nz-menu-item=""
                >
                    
                </li>
                <!--container-->
              </ul>
              <!--container-->
            </nz-dropdown-menu>
          </span>
        </div>
        <div
          class="query-collections__item-queries-item"
        >
          <span
            class="query-collections__item-queries-item-title"
            data-test-id="query-item-title"
          >
            <span
              class="query-title-icon"
            >
              <app-icon
                name="file"
              />
            </span>
             Query 1 
            <!--container-->
            <!--container-->
          </span>
          <!--container-->
          <span
            class="query-collections__item-queries-item-right"
          >
            <span
              class="query-collections__item-queries-item-icon"
            >
              <button
                class="query-collections__item-icon__button"
                nz-dropdown=""
                nztrigger="click"
                type="button"
              >
                <app-icon
                  name="more-horizontal"
                />
              </button>
              <!--container-->
            </span>
            <nz-dropdown-menu>
              <ul
                nz-menu=""
              >
                <!--container-->
                <li
                  data-test-id="delete-query"
                  nz-menu-item=""
                >
                    
                </li>
                <!--container-->
              </ul>
              <!--container-->
            </nz-dropdown-menu>
          </span>
        </div>
        <!--container-->
      </div>
    </div>
  </div>
  <!--container-->
</div>
`;
